// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-bar can mount ActionBar 1`] = `
<div class="SharpActionBar">
	<div class="SharpActionBar__bar sticky-top">
		<div class="container">
			<div class="row align-items-center mx-n2">
				<div class="col-auto col-md left px-2 my-1 my-sm-0"></div>
				<div class="col col-md-auto right px-2 my-1 my-sm-0"></div>
			</div>
		</div>
	</div>
	<!---->
</div>
`;

exports[`action-bar can mount with slots ActionBar 1`] = `
<div class="SharpActionBar">
	<div class="SharpActionBar__bar sticky-top">
		<div class="container">
			<div class="row align-items-center mx-n2">
				<div class="col-auto col-md left px-2 my-1 my-sm-0">
					<div>LEFT CONTENT</div>
				</div>
				<div class="col col-md-auto right px-2 my-1 my-sm-0">
					<div>RIGHT CONTENT</div>
				</div>
			</div>
		</div>
	</div>
	<div class="">
		<div class="row">
			<div class="col">
				<div class="SharpActionBar__extras">
					<div>EXTRAS CONTENT</div>
				</div>
			</div>
			<!---->
		</div>
	</div>
</div>
`;
